[package]
name = "sdkwork-birdcoder-system-descriptor-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sdkwork-web-contract = { workspace = true }
sdkwork-utils-rust.workspace = true


