[package]
name = "sdkwork-birdcoder-tauri-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "~2.11.0", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { workspace = true }
axum = { workspace = true }
notify = "8"
rfd = "0.16"
sdkwork-birdcoder-standalone-gateway = { workspace = true }
