[package]
name = "sdkwork-router-coding-sessions-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork-birdcoder-coding-sessions-service = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true }



