[package]
name = "sdkwork-router-deployment-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork-birdcoder-deployment-service = { workspace = true }



