[package]
name = "sdkwork-router-deployment-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork-birdcoder-deployment-service = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }
sdkwork-birdcoder-router-context = { workspace = true }
sdkwork-web-contract = { workspace = true }
sdkwork-web-core = { workspace = true }



